Adding DSA in the Mix and Moved Exercises into Different Folder

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
     "editor.codeActions.triggerOnFocusChange": true,
-    "editor.autoIndent": "full"
+    "editor.autoIndent": "full",
+    "editor.wordWrap": "wordWrapColumn",
+    "editor.wordWrapColumn": 80,
 }
